--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Logan",
   "license": "ISC",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "inquirer": "^7.0.0",
     "mysql": "^2.16.0"
   }
